# breakout

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  breakout.sln  breakout.vcxproj  breakout.vcxproj.filters
src/: CMakeLists.txt  breakout.c  breakout.h  platform.h  renderer.h  symbol_grids.h  util.h  win32_breakout.c  win32_breakout.h  win32_main.c
